--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -9,11 +9,10 @@
     <p>Your username and password didn't match! Please try again.</p>
     {% endif %}
 
-    <form action="{url 'login'}" method="POST">
+    <form method="POST">
         {% csrf_token %}
-        {% form.as_p %}
+        {{ form.as_p }}
         <input type="submit" value="Login" class="btn btn-primary">
-        <input type="hidden" name="next" value="{{next}}">
     </form>
 </div>
 {% endblock %}
