--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,35 +7,35 @@
     {{post.published_date}}
 </div>
 {% else %}
-<a href="{% url 'post_publish' pk=post.pk%}" class="btn btn-default">Publish</a>
+<a href="{% url 'post_publish' pk=post.pk%}" class="btn btn-primary">Publish</a>
 {% endif %}
 <p class="postcontent">
-    {{post.title|safe|linebreaksbr}}
+    {{post.text|safe|linebreaksbr}}
 </p>
 
 {% if user.is_authenticated %}
 <a href="{% url 'post_edit' pk=post.pk%}" class="btn btn-primary">
-    <span class="glyphicon glyphicon-pencil"></span>
+    <i class="fas fa-edit"></i>
 </a>
 <a href="{% url 'post_remove' pk=post.pk%}" class="btn btn-primary">
-    <span class="glyphicon glyphicon-remove"></span>
+    <i class="fas fa-trash-alt"></i>
 </a>
 {% endif %}
 
 <hr>
-<a class="btn btn-primary btn-comments" href="{% url 'add_comment_to_post' pk = post.pk%}">Add Comment</a>
+<a class="btn btn-primary btn-comments" href="{% url 'add_comment_to_post' pk=post.pk%}">Add Comment</a>
 
 <div class="container">
     {% for comment in post.comments.all %}
     <br>
     {% if comment.approved_comment or user.is_authenticated %}
-    <h3>{{comment.created_date}}</h3>
+    <h5>{{comment.created_date}}</h5>
     {% if not comment.approved_comment %}
-    <a href="{% url 'comment_remove' pk=comment.pk%}" class="btn btn-default">
-        <span class="glyphicon glyphicon-remove"></span>
+    <a href="{% url 'comment_remove' pk=comment.pk%}" class="btn btn-primary">
+        <i class="fas fa-trash-alt"></i>
     </a>
-    <a href="{% url 'comment_approve' pk=comment.pk%}" class="btn btn-default">
-        <span class="glyphicon glyphicon-ok"></span>
+    <a href="{% url 'comment_approve' pk=comment.pk%}" class="btn btn-primary">
+        <i class="fas fa-check"></i>
     </a>
     {% endif %}
     <p>{{comment.text|safe|linebreaks}}</p>
